Stashing the last dregs of styling changes for the evening. BUT, will have a couple things to do in the moring. One, elongate the background svg on index.html. That will likely cause a host of cascading issues. So, also, fix those. And then, I believe the side navs on one if not 2 pages are not the orange we stubled upon and dug. They will have to be changed. What else, what else... oh, font-sizing and font-weighting and letter-spacing...font...will check it out in the morning.

--- a/public/user.css
+++ b/public/user.css
@@ -45,6 +45,8 @@ body {
   margin-top: 12em;
   letter-spacing: 3px;
   font-weight: lighter;
+  color: #9fecf4;
+
 }
 
 
